# pydiylc

./: .gitignore  CHANGELOG.md  LLMS.txt  PUBLISHING.md  README.md  catalog.json  pyproject.toml
docs/: GETTING_STARTED.md  keyboard-tree-editor.md
examples/: demo_booster.py  demo_from_json.py  demo_lpb1_stripboard.py  demo_opamp.py  demo_render_svg.py  layout_for_viewer.py
src/pydiylc/: __init__.py  align_snap.py  buffer.py  cairo_render.py  catalog.py  cli.py  components.py  core.py  edit.py  enums.py  graph.py  history.py  jump.py  loader.py  mcp_server.py  moves.py  prefs.py  reader.py  svg.py  tree_editor.py  viewer.py
tests/: test_buffer.py  test_catalog.py  test_cli.py  test_corpus_round_trip.py  test_edit.py  test_edit_session_integration.py  test_em_and_stripboard.py  test_emitter.py  test_graph.py  test_history.py  test_jump.py  test_loader.py  test_mcp.py  test_moves.py  test_new_components.py  test_png.py  test_prefs.py  test_reader.py  test_semiconductors.py  test_svg.py  test_symbols.py  test_tree_editor.py  test_understaffed_components.py  test_v1_reader.py  test_validation.py  test_viewer_and_cairo.py
