[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydiylc"
version = "0.0.1"
description = "Python emitter for DIYLC (.diy) circuit layout files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "DeepReef11" }]
keywords = ["diylc", "electronics", "perfboard", "stripboard", "circuit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Viewer extras: requires native GTK 4 libs at runtime — install via your
# system package manager (apt: gir1.2-gtk-4.0, pacman: gtk4, dnf: gtk4).
# PyGObject pulls in the python bindings.
viewer = ["pygobject>=3.42", "pycairo>=1.20"]

[project.scripts]
pydiylc = "pydiylc.cli:main"
pydiylc-view = "pydiylc.viewer:main"

[project.urls]
Homepage = "https://github.com/DeepReef11/pydiylc"
Upstream = "https://github.com/bancika/diy-layout-creator"

[tool.hatch.build.targets.wheel]
packages = ["src/pydiylc"]
