[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydiylc"
version = "0.2.0"
description = "Python library + native GTK4 viewer for DIYLC circuit layouts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "DeepReef11" }]
keywords = [
  "diylc", "electronics", "perfboard", "stripboard", "circuit",
  "schematic", "pedal", "guitar", "amplifier", "eda", "cad",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Viewer extras: requires native GTK 4 libs at runtime — install via your
# system package manager (apt: gir1.2-gtk-4.0, pacman: gtk4, dnf: gtk4).
# PyGObject pulls in the python bindings.
viewer = ["pygobject>=3.42", "pycairo>=1.20"]
# MCP server extras: expose pydiylc as a tool surface for MCP-capable LLMs.
mcp = ["mcp>=1.0"]

[project.scripts]
pydiylc = "pydiylc.cli:main"
pydiylc-view = "pydiylc.viewer:main"
pydiylc-mcp = "pydiylc.mcp_server:main"

[project.urls]
Homepage = "https://github.com/DeepReef11/pydiylc"
Repository = "https://github.com/DeepReef11/pydiylc"
Issues = "https://github.com/DeepReef11/pydiylc/issues"
Changelog = "https://github.com/DeepReef11/pydiylc/blob/main/CHANGELOG.md"
Upstream = "https://github.com/bancika/diy-layout-creator"

[tool.hatch.build.targets.wheel]
packages = ["src/pydiylc"]

[tool.hatch.build.targets.wheel.force-include]
"catalog.json" = "pydiylc/data/catalog.json"
"LLMS.txt" = "pydiylc/data/LLMS.txt"

[tool.hatch.build.targets.sdist]
include = [
  "src/pydiylc",
  "tests",
  "examples",
  "catalog.json",
  "LLMS.txt",
  "README.md",
  "CHANGELOG.md",
  "pyproject.toml",
]
